[tool.poetry]
name = "tzprofiles_indexer"
version = "0.1.0"
description = ""
authors = ["Spruce Systems, Inc."]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
# dipdup = "^4.0.2"
# dipdup = {path = "../../../dipdup", develop = true}
dipdup = {git = "https://github.com/dipdup-net/dipdup-py.git", branch = "tmp/prometheus-and-metadata"}
tenacity = "^8.0.1"
didkit = "0.0.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "3.9.0"
flakehell = "^0.9.0"
isort = "^5.7.0"
mypy = "^0.900"

[tool.isort]
line_length = 140

[tool.black]
line-length = 140
target-version = ['py38']
skip-string-normalization = true

[tool.flakehell]
format = "colored"
max_line_length = 140
show_source = true

[tool.flakehell.plugins]
pyflakes = ["+*"]
"flake8-*" = ["+*"]
flake8-docstrings = ["-*"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
