[package]
name = "vc_verifier"
version = "0.1.0"
authors = ["Simon Bihel <simon.bihel@spruceid.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
wee_alloc = { version = "0.4.2" }
didkit-wasm = { path = "../../../didkit/lib/web" }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
